[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://aStarMap/aStarMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://CameraController.gd" type="Script" id=3]
[ext_resource path="res://NPC_1_Theme.tres" type="Theme" id=4]
[ext_resource path="res://MarginContainer.gd" type="Script" id=5]
[ext_resource path="res://TimerLabel.gd" type="Script" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="aStarMap" parent="." instance=ExtResource( 2 )]

[node name="CameraController" type="Position2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="CameraController"]
anchor_mode = 0
current = true
zoom = Vector2( 3, 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_top = 10.0
script = ExtResource( 5 )

[node name="TimerLabel" type="Label" parent="CanvasLayer/Control/MarginContainer"]
margin_right = 1280.0
margin_bottom = 16.0
align = 1
valign = 1
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
